# full-circle

./: .gitignore  Cargo.toml  README.md  cachegrind  index.html  package-lock.json
benches/: my_benchmark.rs
frontend/: README.md  app.js  package-lock.json  package.json  rollup.config.js
frontend/public/bundle/: index.bundle.js  join.bundle.js
frontend/public/js/: common.js  index.js  join.js  worker.js
frontend/public/pkg/: package.json  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
frontend/public/stylesheets/: style.css
frontend/routes/: index.js  join.js
frontend/src/: App.svelte  worker.js
frontend/src/lib/: Canvas.svelte  Chat.svelte  ChatMessage.svelte  CircleCanvas.svelte  Countdown.svelte  Game.svelte  ImagePicker.svelte  PlayButton.svelte  PlayerDisplay.svelte  ServerMessage.svelte  Timeline.svelte  WebWorker.svelte  Websocket.svelte  utils.js
frontend/src/lib/game/: Canvas.svelte
frontend/src/routes/: Home.svelte  Join.svelte  Room.svelte
frontend/tests/: image-picker.spec.js
frontend/views/: index.pug  join.pug
frontend/wasm/: Cargo.toml
frontend/wasm/src/: lib.rs
images/: .gitignore
my-app/: package-lock.json  package.json  vite.config.js
my-app/src/: App.svelte  worker.js
my-app/src/lib/: WebWorker.svelte  Websocket.svelte
my-app/src/routes/: Room.svelte
my-app/wasm/src/: web.rs
server/: Cargo.toml
server/src/: handlers.rs  main.rs  old.rs  res.rs  utils.rs
shape-evolution/: Cargo.toml
shape-evolution/src/: evolve.rs  image_diff.rs  lib.rs  main.rs  mutate.rs  random_shape.rs
src/: .main.rs.swp  image_diff.rs  lib.rs  main.rs  random_shape.rs  utils.rs  web.rs
src/shape_evolution/: evolve.rs  mod.rs  random_shape.rs
svelte-app/: package-lock.json  package.json  rollup.config.js
svelte-app/src/: App.svelte  main.js
tests/: web.rs
wasm/: Cargo.toml
wasm/benches/: wasm_bench.rs
wasm/src/: lib.rs  utils.rs  web.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js  worker.js
www/join/: index.html  index.js
www/peer/: index.html  index.js
