[package]
name = "wallpaper-evolution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
image = "0.24.2"
imageproc = "0.23.0"
rand = "0.8.5"
clap = { version = "3.1.18", features = ["derive"] }
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
js-sys = "0.3.57"
wasm-bindgen-futures = "0.4.30"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
criterion = "0.3"
wasm-bindgen-test = "0.3.13"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'ImageData',
  'CanvasRenderingContext2d',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[[bench]]
name = "my_benchmark"
harness = false
