[workspace]
members = [
    "shape-evolution",
    "server",
    "wasm",
]


#[features]
#default = ["console_error_panic_hook"]

#[dependencies]
#shape-evolution = { path = "shape-evolution" }
#backend-server = { path = "server" }
#image = "0.24.2"
#clap = { version = "3.1.18", features = ["derive"] }
#wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
#js-sys = "0.3.57"
#wasm-bindgen-futures = "0.4.30"
#serde = {version = "1.0", features = ["derive"] }
#
## The `console_error_panic_hook` crate provides better debugging of panics by
## logging them with `console.error`. This is great for development, but requires
## all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
## code size when deploying.
#console_error_panic_hook = { version = "0.1.6", optional = true }
#
#[dev-dependencies]
#criterion = "0.3"
#wasm-bindgen-test = "0.3.13"
#
#
#[dependencies.web-sys]
#version = "0.3.4"
#features = [
#  'ImageData',
#  'CanvasRenderingContext2d',
#  'Headers',
#  'Request',
#  'RequestInit',
#  'RequestMode',
#  'Response',
#  'Document',
#  'Worker',
#  'WorkerGlobalScope',
#  'console',
#  'HtmlButtonElement',
#  'HtmlElement',
#  'MessageEvent',
#]
