[package]
name = "backend-server"
version = "0.1.0"
edition = "2021"

[dependencies]
shape-evolution = { path = "../shape-evolution" }
tokio = { version = "1.19.2", features = ["process", "rt", "rt-multi-thread", "macros"] }
warp = "0.3.2"
futures-util = "0.3.21"
tokio-stream = "0.1.8"
pretty_env_logger = "0.4.0"
uuid = { version = "0.4", features = ["serde", "v4"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
rand = "0.8.5"
http = "0.2.8"
image = "0.24.2"
base64 = "0.13.0"
