[package]
name = "shape-evolution"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24.2"
imageproc = "0.23.0"
rand = "0.8.5"
serde = {version = "1.0", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
js-sys = "0.3.57"
wasm-bindgen-futures = "0.4.30"
