[package]
name = "wasm"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shape-evolution = { path = "../shape-evolution" }
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.30"
js-sys = "0.3.57"
image = "0.24.2"
serde = {version = "1.0", features = ["derive"] }
anyhow = "1.0"
console_error_panic_hook = "0.1.7"
kamadak-exif = "0.5.4"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'ImageData',
  'CanvasRenderingContext2d',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Document',
  'Window',
  'Worker',
  'WorkerGlobalScope',
  'console',
  'HtmlButtonElement',
  'HtmlElement',
  'MessageEvent',
]

[dev-dependencies]
pprof = { version = "0.3", features = ["flamegraph"] }
criterion = "0.3"

[[bench]]
name = "wasm_bench"
harness = false
